# lptstore

./: buildpico.sh  buildusbhost.sh  info.txt  readme.md
docker/: 0001-disable-RP2040-USB-Host-double-buffering.patch  Dockerfile  build.sh  patch1.sh  pico_setup.sh  startup.sh
dos/: clean.conf  dosbox.conf  run.sh
dos/SDPP10/: DRIVER.C  HEADER.ASM  LPTSTORE.C  LPTSTORE.H  MAKEFILE  README.TXT  SD.C  SD.H  SDMM.C  block0.h  block4.h
fs/: Makefile  comp.c  fat32.c  fat32.h  mkcard.sh  mkfakedisk.sh  testcompress.sh  testfat32.c  trial.sh
pico/: CMakeCache.txt  CMakeLists.txt  cmake_install.cmake  disk.h  diskfake.c  lptcomms.c  lptcomms.h  lptprotocol.c  lptprotocol.h  lptstore.c  msc_app.c  picosynth.c  tusb_config.h
trials/: LPT.PAS  LPTSTORE.PAS  LPTTEST.PAS  LPTTEST2.PAS  LPTTEST3.PAS  LPTTEST4.PAS  LPTTEST5.PAS  LPTWT.PAS
usbhost/: CMakeLists.txt  cmake_install.cmake  hid_app.c  main.c  msc_app.c  run.sh  tusb_config.h
